kubernetes/user/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-user
  labels:
    app: app-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-user
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-user
    spec:
      containers:
        - name: app-user
          image: ghcr.io/drobyshevalex/app-user:1.0.0
      terminationGracePeriodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: app-user
  labels:
    app: app-user
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: app-user
